# cachito

./: .coveragerc  .dockerignore  .gitignore  .travis.yml  Dockerfile  MANIFEST.in  Makefile  README.md  cachito-cli.py  cachito.py  dev-requirements.txt  docker-compose.yml  necessary-changes.txt  nexus.json  pyproject.toml  requirements-dev.txt  requirements-test.in  requirements-test.txt  requirements-web.in  requirements-web.txt  requirements-workers.txt  requirements.in  requirements.txt  setup.py  test_env_vars.yaml  thoughts.md  tox.ini
.github/: dependabot.yml
.github/workflows/: codeql.yml  gating.yaml
cachi2/core/: __init__.py  config.py  errors.py  models.py  packages_data.py  utils.py
cachi2/interface/: cli.py  logging.py
cachito/: __init__.py  api_v1.py  app.py  errors.py  paths.py  splash.py  utils.py  views.py  wsgi.py
cachito/common/: checksum.py  packages_data.py  paths.py  s3.py  utils.py
cachito/templates/: index.html
cachito/web/: __init__.py  api_v1.py  app.py  auth.py  config.py  content_manifest.py  docs.py  errors.py  manage.py  metrics.py  models.py  (+6 more)
docker/: Dockerfile-api  Dockerfile-flower  Dockerfile-workers  cachito-httpd.conf  configure-nexus.groovy  configure-nexus.py  docker-entrypoint.sh  flower-waits-for-cachito.sh  passwd.template  rabbitmq.conf
docs/: dependency_confusion.md  metadata.md  pip.md  pull_request_template.md  tracing.md  using_requests_locally.md
hack/: process_gomod.py  test_gomod.sh
tests/: conftest.py  test_api_v1.py  test_cachito.py  test_cachito_config.py  test_checksum.py  test_content_manifest.py  test_docs.py  test_healthcheck.py  test_models.py  test_packages_data.py  test_splash.py  test_status.py  test_utils.py
(+172 files in other folders)
